# fantasydata-collector

./: .gitignore  README.md  justfile  main.py  pyproject.toml  test_recorder.py
.github/: copilot-instructions.md
src/fp_scraper/: __init__.py  captcha_solver.py  config.py  constants.py  context_builder.py  main.py  request_recorder.py  utils.py
src/fp_scraper/handlers/: captcha.py  content.py
src/fp_scraper/pages/: common.py  player_rankings.py
tests/: investigate.ipynb  test_recorder.py
