[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fp_scraper"
version = "0.1.0"
description = "FantasyPros Rankings Scraper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "pandas>=2.3.1",
    "playwright>=1.54.0",
    "playwright-stealth>=2.0.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "speechrecognition[openai]>=3.14.3",
    # "speechrecognition[openai]==3.8.1",
]

[dependency-groups]
dev = [
    "fp_scraper",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fp_scraper*"]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W1203",  # logging-format-interpolation
    "W0718",  # exception-escape
    "W0511",  # TODOs
]

[tool.pyright]
include = ["src", "tests"]
exclude = [
    "docker_data",
    "doc",
    "**/node_modules",
    "**/cdk.out",
    "**/.pytest_cache",
    "**/build",
    "**/dist",
    "**/.vscode",
    "**/__pycache__",
    "**/*.egg-info",
    "**/*.ruff_cache",
    
]
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q  --cov=fp_scraper --cov-report=xml --cov-report=html"
testpaths = ["tests"]
pythonpath = ["src"]